@@ -7,6 +7,8 @@ neutron (2:9.0.0~rc1-2) UNRELEASED; urgency=medium
   [ Thomas Goirand ]
   * Build-Depends on openstack-pkg-tools >= 53~.
   * Fixed oslotest EPOCH.
+  * Added a new neutron-macvtap-agent package.
+  * Fixed oslo-config-gnenerator namespaces for a number of config file.
 
  -- Thomas Goirand <zigo@debian.org>  Wed, 28 Sep 2016 10:01:19 +0200
 
